# python-cpp-binding-examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bindings/lib2_pybind11/: CMakeLists.txt
bindings/lib2_pythonapi/: CMakeLists.txt
bindings/lib2_shiboken/: CMakeLists.txt  lib2_shiboken.xml
bindings/lib2_sip/: CMakeLists.txt  lib2_sip.sip  pyproject.toml
binds/lib2_pybind11/: lib2_pybind11.cpp
binds/lib2_pythonapi/: lib2_pythonapi.cpp
binds/lib2_sip/: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
cpp/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
pybind11/: lib2_pybind11.cpp
python/: test_lib1.py  test_lib1_cffi.py
pythontests/: mycommon.py  test_lib1_cffi.py  test_lib1_ctypes.py  test_lib2_pybind11.py  test_lib2_pythonapi.py  test_lib2_shiboken.py  test_lib2_sip.py
